releases/nightly-build/kubernetes/edgex-config-seed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: edgex-config-seed
  labels:
    app: edgex-config-seed
spec:
  containers:
    - name: edgex-config-seed
      image: nexus3.edgexfoundry.org:10004/docker-core-config-seed-go:1.1.0
  restartPolicy: OnFailure
