releases/nightly-build/kubernetes/edgex-core-command.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-core-command
spec:
  type: ClusterIP
  selector:
    app: edgex-core-command
  ports:
    - port: 48082
      name: port-48082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-core-command
  labels:
    app: edgex-core-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgex-core-command
  template:
    metadata:
      name: edgex-core-command
      labels:
        app: edgex-core-command
    spec:
      containers:
        - name: edgex-core-command
          image: nexus3.edgexfoundry.org:10004/docker-core-command-go:1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 48082
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 48082
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 48082
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edgex-core-command
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: command.k8s
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: edgex-core-command
              servicePort: 48082
