releases/nightly-build/kubernetes/edgex-support-notifications.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgex-support-notifications
spec:
  type: ClusterIP
  selector:
    app: edgex-support-notifications
  ports:
    - port: 48060
      name: port-48060
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgex-support-notifications
  labels:
    app: edgex-support-notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgex-support-notifications
  template:
    metadata:
      name: edgex-support-notifications
      labels:
        app: edgex-support-notifications
    spec:
      containers:
        - name: edgex-support-notifications
          image: nexus3.edgexfoundry.org:10004/docker-support-notifications-go:1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 48060
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 48060
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 48060
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edgex-support-notifications
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: notifications.k8s
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: edgex-support-notifications
              servicePort: 48060
